kubernetesSample/nginx-redirector/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-check
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-check
      tier: middle
  template:
    metadata:
      labels:
        app: service-check
        tier: middle
    spec:
#      serviceAccountName: legacy-app
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: tier
#                    operator: In
#                    values:
#                      - middle
#                  - key: role
#                    operator: In
#                    values:
#                      - default
      imagePullSecrets:
        - name: dockerhub
      containers:
        - name: service-check
          image: nginx:1.17.6-alpine
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          ports:
            - name: http-port
              containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: config-volume
              subPath: nginx.conf
              readOnly: true
            - mountPath: /etc/nginx/conf.d
              name: conf-d
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: service-check-nginx-config
        - name: conf-d
          projected:
            sources:
              - configMap:
                  name: service-check-nginx-config
                  items:
                    - key: default.conf
                      path: default.conf
