kubernetesSample/nginx-redirector/nginx-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-check
  namespace: default
  labels:
    app: service-check
    tier: middle
spec:
  type: NodePort
  selector:
    app: service-check
    tier: middle
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
